# CentroidalPlanner

./: .gitignore  CMakeLists.txt  README.md  package.xml
bindings/python/: CMakeLists.txt  pyCpl.cpp  pyCplCasadi.cpp  pyForcePub.cpp
cartesio_stack/: centauro_DEMO_stack.yaml  centauro_stack.yaml  centauro_template_jumping_stack.yaml  coman_stack.yaml  template_stack.yaml
centauro-config/srdf/: centauro.srdf  centauro_full.srdf
centauro-config/urdf/: centauro.urdf  centauro_full.urdf  centauro_reduced.urdf
coman_calibration/: calib.launch
config/: centauro_tau_offset.yaml
configs/: tau_offset.yaml
examples/: centauro_replay_node.cpp
examples/data_replay/: centauro_wall.mat  template_jumping.mat
examples/python/: XBotModeHandler.py  cartesio_planner.py  cartesio_planner_1.py  centauro_DEMO.py  centauro_full_jumping.py  centauro_full_wall.py  centauro_legs_on_the_wall.py  centauro_reduced_wall.py  centauro_replay.py  centauro_stress_test.py  centauro_template_jumping_replay.py  centauro_walking.py  coman_sheep.py  foot_positioning.py  foot_positioning_1.py  hand_positioning.py  homing.py  impact_detector.py  jumping_collocation.py  jumping_dms.py  legs_on_the_wall.py  lower_ankle_impedance.py  opt_sheep.py  opt_wall.py  query_yes_no.py  send_Force_and_Normal.py  surface_reacher.py  template_jumping_collocation.py  template_jumping_dms.py  template_legs_on_the_wall.py  template_wall.py  test.py  test_cartesio.py  test_casadi.py  trial_planner.py  tryporoor.py  xbot_damping.py  xbot_stiffness.py
include/CentroidalPlanner/: CentroidalPlanner.h  CoMPlanner.h  Utils.h
include/CentroidalPlanner/Casadi/: generate_kin_dyn.h  pinocchio_bug.cpp
include/CentroidalPlanner/Environment/: Environment.h  Ground.h  Superquadric.h
include/CentroidalPlanner/Ifopt/: CPLSolver.h  CplProblem.h  CplSolver.h  MinimizeCentroidalVariables.h  SimpleProblem.h  Solver.h  Types.h  Variable3D.h
include/CentroidalPlanner/Ifopt/Constraints/: CentroidalStatics.h  EnvironmentConstraint.h  EnvironmentNormal.h  FrictionCone.h
include/CentroidalPlanner/Ifopt/Constraints/Environment/: EnvironmentConstraint.h  EnvironmentNormal.h
include/CentroidalPlanner/Utils/: Utils.h
include/Environment/: Environment.h
include/Environment/environments/: superquadric.h
include/IFOPT/: minimize_centroidal_variables.h
include/IFOPT/constraints/: centroidal_statics.h  friction_cone.h
include/IFOPT/constraints/environment/: environment_constraint.h  environment_normal.h
include/forza_giusta/: ForcePublisher.h  ForzaGiustaOpt.h  ForzaGiustaOpt_withoutWrench.h
launch/: centauro.launch  centauro_DEMO_control.launch  centauro_DEMO_planner.launch  centauro_full.launch  centauro_reduced.launch  centauro_replay.launch  centauro_template_jumping.launch  coman.launch  coman_forza_giusta.launch  coman_visual.launch  force_est_world_connecter.launch  forza_giusta.launch  template.launch  utils.launch
src/: CentroidalPlanner.cpp  CoMPlanner.cpp  CplProblem.cpp  Ground.cpp  MinimizeCentroidalVariables.cpp  SimpleProblem.cpp  Superquadric.cpp  Utils.cpp  Variable3D.cpp  minimize_variables.cpp
src/Constraints/: CentroidalStatics.cpp  EnvironmentConstraint.cpp  EnvironmentNormal.cpp  FrictionCone.cpp
src/Ros/: Cpl_TorqueFeedforward.cpp
src/Utils/: Cpl_ForceOptimization.cpp  SurfaceReacher.cpp  Utils.cpp
src/constraints/: centroidal_statics.cpp  friction_cone.cpp
src/environments/: superquadric.cpp
src/forza_giusta/: ForzaGiustaFeedForward.cpp  ForzaGiustaFeedForward_withoutWrench.cpp
srv/: SetContactForce.srv  SetContactFrame.srv  SetLiftedContacts.srv  SetManipWrench.srv  setStiffnessDamping.srv
template-ros-pkg/srdf/: template.srdf
template-ros-pkg/urdf/: template.urdf
tests/: CMakeLists.txt  TestBasic.cpp
worlds/: cogimon_wall.world  cogimon_wall2.world
xbot_config/: cogimon_simple_example.yaml
